# tatvik

./: .gitignore  MASTER_PROMPT.md  README.md  autodevs_cli_simulator.py  build_log.txt  completed_till_now.md  deploy_pipeline.sh  devmentor.db  pubspec.yaml  tatvik.db  test_results.txt  vercel.json
backend/: Dockerfile  check_ai_layers.py  check_services.py  migrate.py  pyproject.toml  requirements.txt  run_server.sh  test.db  test_ai_os_pipeline.py  test_nvidia_integration.py  test_openclaw_scraper.py  test_pulse.py  test_reviewer.py  verify_db.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  exceptions.py  rate_limiter.py  security.py
backend/app/db/: seed.py  session.py
backend/app/ingestion/: models.py
backend/app/ingestion/adapters/: base.py
backend/app/models/: __init__.py  entities.py  user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py  cognee_service.py  github_agent_service.py  github_service.py  google_drive_service.py  news_scanner.py  openclaw_service.py  openclaw_tools.py  pdf_generator_service.py  pipeline_status.py  pulse_engine.py  tatvik_planner.py  user_service.py  webhook_router.py
backend/app/tatvik/agents/: architect.py  base.py  career.py  guardian.py  memory.py  mentor.py  navigator.py  reviewer.py  scholar.py  scout.py  trend.py
backend/app/tatvik/graph/: cognee_client.py
backend/tests/: openclaw_schema.json  test_api.py  test_live_integrations.py  test_openclaw_architecture.py
(+91 files in other folders)
